crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan_rc_data-2.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "<textarea></textarea "

---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- EndTag: textarea

