crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan_rc_data-4.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "<textarea></textareas>"

---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- Text: "</textareas>"

