crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan_rc_data-7.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "<textarea>{{test}}</textarea>"

---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- Interpolation: test
- EndTag: textarea

